--- a/my_store/templates/my_store/base.html
+++ b/my_store/templates/my_store/base.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
     <script type = "text/JavaScript">
             function AutoRefresh( t ) {
@@ -50,17 +50,26 @@
         <div class="collapse navbar-collapse change-bgColor" id="navbarResponsive">
           <ul class="navbar-nav ml-md-auto px-3">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="{% url 'store-home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">News&Updates</a>
+              <a class="nav-link" href="{% url 'store-store' %}">Store</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Store</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Log Out</a>
-            </li>
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                </li>
+              {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'register' %}">Register</a>
+                </li>
+              {% endif %}
           </ul>
         </div>
       </div>
@@ -69,6 +78,14 @@
 
     <!-- Viewer -->
     <div class="container-fluid viewer-body m-0 px-3 py-5">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+          </div>
+        {% endfor %}
+        {% endif %}
+
       {% block content %}{% endblock %}
     </div>
 
