--- a/my_store/static/css/style.css
+++ b/my_store/static/css/style.css
@@ -62,6 +62,55 @@ html{
   border-top: 3px solid #d6d6d6;
 }
 
+#prod_table_paginate > span > a{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+#prod_table_paginate > *{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.checkbox-cont{
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-cont > input[type="checkbox"]{
+  appearance: none;
+  -webkit-appearance: none;
+  height: 1rem;
+  width: 1rem;
+  background-color: #d5d5d5;
+  border-radius: 0.1rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox-cont > input[type="checkbox"]:after{
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content:  "\f00c";
+  font-size: 0.8rem;
+  color: white;
+  display: none;
+}
+
+.checkbox-cont > input[type="checkbox"]:hover{
+  background-color: #a5a5a5;
+}
+
+.checkbox-cont > input[type="checkbox"]:checked{
+  background-color: #5bcd3e;
+}
+
+.checkbox-cont > input[type="checkbox"]:checked:after{
+  display: block;
+}
+
 .sp-head{
   background-color: #0244bf;
   border-top-right-radius: 25px;
