--- a/my_store/templates/my_store/store.html
+++ b/my_store/templates/my_store/store.html
@@ -14,44 +14,48 @@
           <a href="#Seafood-cont">Seafood</a>
         </div>
 
-        <div id="my_products">
-          {% for category in categories %}
-            <div class="container mb-5" id="{{ category }}-cont">
-              <div class="row panel-header">
-                <div class="col-12">
-                  <h1 class="py-2 px-3">{{ category }}</h1>
-                </div>
-              </div>
 
-              <div class="row panel-body py-3 px-5">
-                <div class="container-fluid">
-                  {% for item in prod|cat_filter:category %}
-                    {% if forloop.counter0|divisibleby:4 %} <div class="row"> {% endif %}
-                      <div class="my-2 col-sm-12 col-md-3 text-center">
-                        <div class="item-viewer px-3">
-                          <h3 class="item-title">{{ item.title }}</h3>
-                          {% if item.available %}
-                            <h5 class="item-is-avail">{{ item.available|is_available }}</h5>
-                            {% else %}
-                            <h5 class="item-not-avail">{{ item.available|is_available }}</h5>
-                            {% endif %}
-                          <div class="row" id="amount-left">
-                            <div class="col-4 col-md-12 col-lg-4 amnt-md">
-                              <p>Amount Left: </p>
-                            </div>
 
-                            <div class="col-8 col-md-12 col-lg-8 py-1">
-                              <p>{{ item.item_count }}</p>
-                            </div>
-                          </div>
+        <div class="container" id="my_products">
+          <table class="table table-striped table-bordered" id="prod_table">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Item</th>
+                <th>Availability</th>
+                <th>Price</th>
+                <th>Amount Left</th>
+                <th>Category</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              {% for item in prod %}
+                <tr>
+                  <td>
+                    <div class="container-fluid">
+                      <div class="row">
+                        <div class="col-12 col-md-4 checkbox-cont p-0">
+                          <input class="my_checkbox" type="checkbox">
+                        </div>
+
+                        <div class="col-12 col-md-8 px-1 order-settings">
+                          <form class="">
+                            <input type="number">
+                          </form>
                         </div>
                       </div>
-                    {% if forloop.counter|divisibleby:4 or forloop.last %} </div> {% endif %}
-                  {% endfor %}
-                </div>
-              </div>
-            </div>
-            {% endfor %}
+                    </div>
+                  </td>
+                  <td>{{ item.title }}</td>
+                  <td>{{ item.available }}</td>
+                  <td>{{ item.price }}</td>
+                  <td>{{ item.item_count }}</td>
+                  <td>{{ item.product_category }}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
       </div>
 
