--- a/my_store/static/css/style.css
+++ b/my_store/static/css/style.css
@@ -57,11 +57,11 @@ html{
 }
 
 .num-form-cont{
-  width: 6rem;
+  width: 10rem;
 }
 
 .number-form{
-  width: 4rem;
+  width: 2em;
 }
 
 #search_field{
