--- a/my_store/templates/my_store/base.html
+++ b/my_store/templates/my_store/base.html
@@ -56,6 +56,11 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'store-store' %}">Store</a>
             </li>
+            {% if user.is_superuser %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'admin-page' %}">Admin</a>
+              </li>
+              {% endif %}
             {% if user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'profile' %}">Profile</a>
