--- a/my_store/templates/my_store/store.html
+++ b/my_store/templates/my_store/store.html
@@ -13,12 +13,12 @@
         </div>
 
         <form class="" method="post"> {% csrf_token %}
-          <div class="container" id="my_products">
+          <div class="container-fluid" id="my_products">
             <table class="table table-striped table-bordered" id="prod_table">
               <thead>
                 <tr>
                   {% if user.is_authenticated %}
-                    <th></th>
+                    <th>LIST          </th>
                     {% endif %}
                   <th>Item</th>
                   <th>Availability</th>
@@ -33,9 +33,9 @@
                   <tr>
                     {% if user.is_authenticated %}
                       <td>
-                        <div class="container-fluid">
+                        <div class="container-fluid px-2">
                           <div class="row">
-                            <div class="col-12 col-md-4 checkbox-cont p-0">
+                            <div class="col-12 col-md-4 checkbox-cont center-block mb-1 m-md-0 px-md-0">
 
                               {% order_field form item.title %}
                             </div>
@@ -49,7 +49,7 @@
                       {% endif %}
                     <td>{{ item.title }}</td>
                     <td>{{ item.available }}</td>
-                    <td>{{ item.price }}</td>
+                    <td id="{{ item.title }}-price">{{ item.price }}</td>
                     <td>{{ item.item_count }}</td>
                     <td>{{ item.product_category }}</td>
                   </tr>
@@ -69,11 +69,14 @@
         </form>
       </div>
 
-      <div class="col-4 news_panel text-center p-0" id='SidePanel'>
+      <div class="col-4 text-center p-0" id='SidePanel'>
         <div class="sp-head p-3">
-          <div class="yow py-2">
+          <div class="container-fluid yow py-2">
             <h2>News & Updates</h2>
           </div>
+        </div>
+        <div class="sp-body p-3">
+          <h3>No News & Updates</h3>
         </div>
       </div>
     </div>
