--- a/my_store/templates/my_store/store.html
+++ b/my_store/templates/my_store/store.html
@@ -66,7 +66,7 @@
               {% order_field form 'address' %}
             </div>
 
-          <button class="btn" type="submit">Order</button>
+          <button class="btn" type="submit">{{ btn }}</button>
             {% endif %}
         </form>
       </div>
