--- a/my_store/templates/my_store/home.html
+++ b/my_store/templates/my_store/home.html
@@ -1,27 +1,51 @@
 {% extends "my_store/base.html" %}
-{% load static %}
 {% block content %}
   <!-- Image Slider -->
-  <div id="slides" class="carousel slide" data-ride="carousel">
-    <ul class="carousel-indicators">
-      <li data-target="#slides" data-slide-to="0" class="active"></li>
-    </ul>
-    <div class="carousel-inner">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      {% for image in home_images %}
+        <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}"></li>
+        {% endfor %}
+    </ol>
+
+    <div class="carousel-inner inner-home">
       {% for image in home_images %}
         <div class="carousel-item {% if forloop.first %}active{% endif %}">
-          <img src="{{ image.my_image.url }}" >
+          <img class="d-block w-100" src="{{ image.my_image.url }}">
           {% if forloop.first %}
-            <div class="carousel-caption">
-              <h1 class="welcome-message">Welcome to The Villa Store</h1>
-              <p class="h5">Check out our products or Log In to order down bellow</p>
-              <button type="button" class="btn btn-outline-light btn-lg mx-1 my-2">Store</button>
-              <button type="button" class="btn btn-primary btn-lg signup-btn mx-1 my-2">Sign Up</button>
-            </div>
+
             {% endif %}
         </div>
         {% endfor %}
+        <div class="carousel-caption d-none d-md-block">
+          <h1 class="display-2">Welcome to The Villa Store</h1>
+          <p class="h4">check our products in the store section or Sign up now to order</p>
+          <a href="{% url 'store-store' %}" class="btn btn-outline-light btn-lg">Store</a>
+          <a href="{% url 'register' %}" class="btn btn-primary btn-lg">Sign Up</a>
+        </div>
+    </div>
+
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+  <!-- Jumbotron -->
+  <div class="container-fluid">
+    <div class="row jumbotron">
+      <div class="col-12">
+        <p class="lead">Currently we only buy and sell new products every Saturday.
+                        If you are interested in any particular product that you would want us to sell
+                        just accomplish the request form in the <a href="{% url 'store-store' %}">store section</a>.
+        </p>
+      </div>
     </div>
   </div>
 
-
+  <h1>{{ request.url}}</h1>
 {% endblock content %}
