--- a/my_store/templates/my_store/store.html
+++ b/my_store/templates/my_store/store.html
@@ -12,63 +12,71 @@
             {% endif %}
         </div>
 
-        <form class="" method="post"> {% csrf_token %}
-          <div class="container-fluid" id="my_products">
-            <table class="table table-striped table-bordered" id="prod_table">
-              <thead>
-                <tr>
-                  {% if user.is_authenticated %}
-                    <th>LIST          </th>
-                    {% endif %}
-                  <th>Item</th>
-                  <th>Availability</th>
-                  <th>Price</th>
-                  <th>Per</th>
-                  <th>Amount Left</th>
-                  <th>Category</th>
-                </tr>
-              </thead>
-
-              <tbody>
-                {% for item in prod %}
+        <div class="scrollable">
+          <form id="my_order_form" method="post"> {% csrf_token %}
+            <div class="container-fluid" id="my_products">
+              <table class="table table-striped table-bordered" id="prod_table">
+                <thead>
                   <tr>
                     {% if user.is_authenticated %}
-                      <td>
-                        <div class="container-fluid px-2">
-                          <div class="row">
-                            <div class="col-12 col-md-4 checkbox-cont center-block mb-1 m-md-0 px-md-0">
+                      <th>LIST          </th>
+                      {% endif %}
+                    <th>Item</th>
+                    <th>Availability</th>
+                    <th>Price</th>
+                    <th>Per</th>
+                    <th>Amount Left</th>
+                    <th>Category</th>
+                  </tr>
+                </thead>
 
-                              {% order_field form item.title %}
-                            </div>
+                <tbody>
+                  {% for item in prod %}
+                    <tr>
+                      {% if user.is_authenticated %}
+                        <td>
+                          <div class="container-fluid px-2">
+                            <div class="row">
+                              <div class="col-12 col-md-4 checkbox-cont center-block mb-1 m-md-0 px-md-0">
+                                {% order_field form item.title %}
+                              </div>
 
-                            <div id="{{ item }}-order" class="col-12 col-md-8 px-1 order-settings">
-                                {% order_counter form item.title %}
+                              <div id="{{ item }}-order" class="col-12 col-md-8 px-1 order-settings">
+                                  {% order_counter form item.title %}
+                              </div>
                             </div>
                           </div>
-                        </div>
-                        </td>
-                      {% endif %}
-                    <td>{{ item.title }}</td>
-                    <td>{{ item.available }}</td>
-                    <td id="{{ item.title }}-price">{{ item.price }}</td>
-                    <td>{{ item.price_per }}</td>
-                    <td>{{ item.item_count }}</td>
-                    <td>{{ item.product_category }}</td>
-                  </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-
-          {% if user.is_authenticated %}
-            <div class="">
-              {% order_field form 'number' %}
-              {% order_field form 'address' %}
+                          </td>
+                        {% endif %}
+                      <td>{{ item.title }}</td>
+                      <td class="{{ item.available }}-formatting">{{ item.available }}</td>
+                      <td id="{{ item.title }}-price">{{ item.price }}</td>
+                      <td>{{ item.price_per }}</td>
+                      <td>{{ item.item_count }}</td>
+                      <td>{{ item.product_category }}</td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
             </div>
 
-          <button class="btn" type="submit">{{ btn }}</button>
-            {% endif %}
-        </form>
+            {% if user.is_authenticated %}
+              <div class="mx-3 my-2">
+                <h5 class="d-inline">Number: </h5>
+                {% order_field form 'number' %}
+              </div>
+              <div class="mx-3 my-2">
+                <h5 class="d-inline">Address: </h5>
+                {% order_field form 'address' %}
+              </div>
+              <div class="mx-3 my-2">
+                {% order_field form 'add_message' %}
+              </div>
+
+            <button id="submit_ro" onclick="deactivate_me('#submit_ro')" class="btn" type="submit">{{ btn }}</button>
+              {% endif %}
+          </form>
+        </div>
       </div>
 
       <div class="col-4 text-center p-0" id='SidePanel'>
