--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,5 +1,33 @@
 {% extends "my_store/base.html" %}
 {% load crispy_forms_tags %}
+{% load users_tag %}
 {% block content %}
   <h1>{{ user.username }}</h1>
+  <div class="container-fluid my-4">
+    <table class="table table-striped table-bordered" id="user-table">
+      <thead>
+        <tr>
+          <th>Orders and request</th>
+          <th>category</th>
+          <th>Date and time</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for order in orders|data_by_user:user %}
+          <tr>
+            <td>{{ order.Person }}</td>
+            <td>Orders</td>
+            <td>{{ order.time_ordered }}</td>
+          </tr>
+          {% endfor %}
+        {% for request in requests|data_by_user:user %}
+          <tr>
+            <td>{{ request.Person }}</td>
+            <td>Requests</td>
+            <td>{{ request.time_ordered }}</td>
+          </tr>
+          {% endfor %}
+      </tbody>
+    </table>
+  </div>
 {% endblock content %}
