--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -10,7 +10,7 @@
       </fieldset>
 
       <div class="form-group">
-        <button class="btn btn-outline-info" type="submit">Sign Up</button>
+        <button id="register_btn" onclick="deactivate_me('#register_btn')" class="btn btn-outline-info" type="submit">Sign Up</button>
       </div>
     </form>
 
