--- a/my_store/templates/my_store/base.html
+++ b/my_store/templates/my_store/base.html
@@ -97,6 +97,35 @@
       {% block content %}{% endblock %}
     </div>
 
+    <!-- Footer -->
+    <footer>
+      <div class="container-fluid padding">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <h3>The Villa Store</h3>
+            <hr class="light">
+            <p></p>
+            <p></p>
+            <p>B6 L2 Ph1</p>
+            <p>Avida Sta. Catalina</p>
+          </div>
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-4">
+            <hr class="light">
+            <h5>Our days</h5>
+            <hr class="light">
+            <p>Saturdays</p>
+          </div>
+          <div class="col-12">
+            <hr class="light">
+            <h5>&copy; thevilla.pythonanywhere.com</h5>
+          </div>
+        </div>
+      </div>
+    </footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -119,7 +148,7 @@
     <script src="{% static 'js/main.js' %}">
     </script>
     <script>
-      
+
     </script>
   </body>
 </html>
