--- a/my_store/templates/my_store/home.html
+++ b/my_store/templates/my_store/home.html
@@ -2,22 +2,24 @@
 {% block content %}
   <!-- Image Slider -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
     <ol class="carousel-indicators">
       {% for image in home_images %}
         <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}"></li>
         {% endfor %}
     </ol>
 
+    <!-- Images -->
     <div class="carousel-inner inner-home">
       {% for image in home_images %}
         <div class="carousel-item {% if forloop.first %}active{% endif %}">
-          <img class="d-block w-100" src="{{ image.my_image.url }}">
+          <img class="d-block" src="{{ image.my_image.url }}">
           {% if forloop.first %}
 
             {% endif %}
         </div>
         {% endfor %}
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption d-md-block">
           <h1 class="display-2">Welcome to The Villa Store</h1>
           <p class="h4">check our products in the store section or Sign up now to order</p>
           <a href="{% url 'store-store' %}" class="btn btn-outline-light btn-lg">Store</a>
@@ -25,6 +27,7 @@
         </div>
     </div>
 
+    <!-- Controls -->
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
