--- a/my_store/templates/my_store/store.html
+++ b/my_store/templates/my_store/store.html
@@ -22,7 +22,6 @@
                       <th>LIST          </th>
                       {% endif %}
                     <th>Item</th>
-                    <th>Availability</th>
                     <th>Price</th>
                     <th>Per</th>
                     <th>Amount Left</th>
@@ -32,7 +31,8 @@
 
                 <tbody>
                   {% for item in prod %}
-                    <tr>
+                    {% if item.available %}
+                      <tr>
                       {% if user.is_authenticated %}
                         <td>
                           <div class="container-fluid px-2">
@@ -49,12 +49,12 @@
                           </td>
                         {% endif %}
                       <td>{{ item.title }}</td>
-                      <td class="{{ item.available }}-formatting">{{ item.available }}</td>
                       <td id="{{ item.title }}-price">{{ item.price }}</td>
                       <td>{{ item.price_per }}</td>
                       <td>{{ item.item_count }}</td>
                       <td>{{ item.product_category }}</td>
                     </tr>
+                    {% endif %}
                   {% endfor %}
                 </tbody>
               </table>
