--- a/my_store/templates/my_store/home.html
+++ b/my_store/templates/my_store/home.html
@@ -20,7 +20,7 @@
         </div>
         {% endfor %}
         <div class="carousel-caption d-md-block">
-          <h1 class="display-2">Welcome to The Villa Store</h1>
+          <p class="h1">Welcome to The Villa Store</p>
           <p class="h4">check our products in the store section or Sign up now to order</p>
           <a href="{% url 'store-store' %}" class="btn btn-outline-light btn-lg">Store</a>
           <a href="{% url 'register' %}" class="btn btn-primary btn-lg">Sign Up</a>
