--- a/my_store/templates/my_store/store.html
+++ b/my_store/templates/my_store/store.html
@@ -2,7 +2,7 @@
 {% load my_store_tags %}
 {% block content %}
   <div id="store-body">
-    <div class="row mx-lg-2">
+    <div class="row mx-lg-2 my-5">
       <div class="col-lg-8 col-12">
         <div id="additional" class="container-fluid">
           {% if not user.is_authenticated %}
