--- a/my_store/templates/my_store/admin_only.html
+++ b/my_store/templates/my_store/admin_only.html
@@ -1,10 +1,10 @@
 {% extends "my_store/base.html" %}
 {% load my_store_tags %}
 {% block content %}
-  <div class="container-fluid">
+  <div class="m-5">
     <h1>Admin: {{ user.username }}</h1>
 
-    <div class="container-fluid">
+    <div class="scrollable">
       <table class="table table-striped table-bordered" id="admin-table">
         <thead>
           <tr>
