--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -7,6 +7,7 @@
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">Register Now</legend>
         {{ form|crispy }}
+        {{ profile_form|crispy }}
       </fieldset>
 
       <div class="form-group">
