--- a/my_store/templates/my_store/store.html
+++ b/my_store/templates/my_store/store.html
@@ -1,7 +1,8 @@
 {% extends "my_store/base.html" %}
+{% load static %}
 {% load my_store_tags %}
 {% block content %}
-  <div id="store-body">
+  <div id="refresh-body">
     <div class="row mx-lg-2 my-5">
       <div class="col-lg-8 col-12">
         <div id="additional" class="container-fluid">
@@ -29,52 +30,44 @@
                   </tr>
                 </thead>
 
-                <tbody>
-                  {% for item in prod %}
-                    {% if item.available %}
-                      <tr>
-                      {% if user.is_authenticated %}
-                        <td>
-                          <div class="container-fluid px-2">
-                            <div class="row">
-                              <div class="col-12 col-md-4 checkbox-cont center-block mb-1 m-md-0 px-md-0">
-                                {% order_field form item.title %}
-                              </div>
-
-                              <div id="{{ item }}-order" class="col-12 col-md-8 px-1 order-settings">
-                                  {% order_counter form item.title %}
-                              </div>
-                            </div>
-                          </div>
-                          </td>
+                <tbody class="item-contents">
+                      <div class="another">
+                          {{ formset.management_form }}
+                      </div>
+                      {% for form, item in mylist %}
+                        {% if item.available %}
+                          <tr>
+                              {% if user.is_authenticated %}
+                                <td>
+                                    <div class="container-fluid px-2">
+                                        <div class="row">
+                                            <div class="col-12 col-md-4 checkbox-cont center-block mb-1 m-md-0 px-md-0">
+                                              <input id="{{ item.title }}-checkbox" class="btn-update" type="checkbox" onclick="hide_me('{{ item.title }}',{{ item.id }})">
+                                            </div>
+                                            <div id="{{ item }}-order" class="col-12 col-md-8 px-1 order-settings">
+                                              {% get_field form "item" %}
+                                              {% get_field form "quantity" %}
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
+                              {% endif %}
+                              <td>{{ item.title }}</td>
+                              <td id="{{ item.title }}-price">{{ item.price }}</td>
+                              <td>{{ item.price_per }}</td>
+                              <td>{{ item.item_count }}</td>
+                              <td>{{ item.product_category }}</td>
+                          </tr>
                         {% endif %}
-                      <td>{{ item.title }}</td>
-                      <td id="{{ item.title }}-price">{{ item.price }}</td>
-                      <td>{{ item.price_per }}</td>
-                      <td>{{ item.item_count }}</td>
-                      <td>{{ item.product_category }}</td>
-                    </tr>
-                    {% endif %}
-                  {% endfor %}
+                      {% endfor %}
                 </tbody>
+
               </table>
             </div>
 
             {% if user.is_authenticated %}
-              <div class="mx-3 my-2">
-                <h5 class="d-inline">Number: </h5>
-                {% order_field form 'number' %}
-              </div>
-              <div class="mx-3 my-2">
-                <h5 class="d-inline">Address: </h5>
-                {% order_field form 'address' %}
-              </div>
-              <div class="mx-3 my-2">
-                {% order_field form 'add_message' %}
-              </div>
-
-            <button id="submit_ro" onclick="deactivate_me('#submit_ro')" class="btn mx-5" type="submit">{{ btn }}</button>
-              {% endif %}
+                <button id="submit_ro" onclick="deactivate_me('#submit_ro')" class="btn btn-success btn-lg mx-5" type="submit">{{ btn_title }}</button>
+            {% endif %}
           </form>
         </div>
       </div>
