--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,39 +1,53 @@
 {% extends "my_store/base.html" %}
 {% load crispy_forms_tags %}
+{% load static %}
 {% load users_tag %}
 {% block content %}
   <div class="m-5">
-    <h1 class="m-0">{{ user.username }}</h1>
+    <h1 class="m-0">{{ user.first_name }} {{ user.last_name }}</h1>
 
-    <div class="p-0 m-4">
+    <div class="p-0 scrollable">
       <table class="table table-striped table-bordered" id="user-table">
         <thead>
           <tr>
             <th>Orders and request</th>
-            <th>category</th>
+            <th>Status</th>
+            <th>Category</th>
             <th>Date and time</th>
           </tr>
         </thead>
-        <tbody>
-          {% for order in orders|data_by_user:user %}
-            <tr>
-              <td>
-                <a href="{% url 'user-order-detail' order.id %}">{{ order.Person }}</a>
-              </td>
-              <td>Orders</td>
-              <td>{{ order.time_ordered }}</td>
-            </tr>
-            {% endfor %}
-          {% for request in requests|data_by_user:user %}
-            <tr>
-              <td>
-                <a href="{% url 'user-request-detail' request.id %}">{{ request.Person }}</a>
-              </td>
-              <td>Requests</td>
-              <td>{{ request.time_ordered }}</td>
-            </tr>
-            {% endfor %}
+        <tbody class="refresh-table">
+          {% for item in orders|user_data:user %}
+          <tr>
+            <td class="ref-code-limit">
+              <p class="overflow">
+                <a href="{% url 'user-order-detail' item.id %}">{{ item.ref_code }}</a>
+              </p>
+            </td>
+            <td class="{{item.completed}}-formatting">
+              {% if item.completed %}
+                Delivered
+              {% else %}
+                Pending
+              {% endif %}
+            </td>
+            <td>Orders</td>
+            <td>{{ item.time_ordered }}</td>
+          </tr>
+          {% endfor %}
+          {% for item in requests|user_data:user %}
+          <tr>
+            <td>
+              <a href="{% url 'user-request-detail' item.id %}">{{ item.ref_code }}</a>
+            </td>
+            <td>Requests</td>
+            <td>{{ item.completed }}</td>
+            <td>{{ item.time_ordered }}</td>
+          </tr>
+          {% endfor %}
         </tbody>
+        <script type="text/javascript" src="{% static 'js/refresh_user.js' %}" defer>
+        </script>
       </table>
     </div>
   </div>
