--- a/my_store/templates/my_store/store.html
+++ b/my_store/templates/my_store/store.html
@@ -72,10 +72,13 @@
         </div>
       </div>
 
+      <!-- Side Panel for Large Screens -->
       <div class="col-lg-4 text-center p-0" id='SidePanel'>
-        <div class="sp-head p-3">
-          <div class="container-fluid yow py-2">
+        <div class="sp-head">
+          <div class="container-fluid py-1">
+            <hr class="light">
             <h2>News & Updates</h2>
+            <hr class="light">
           </div>
         </div>
         <div class="sp-body p-3">
